--- a/styles/contact.css
+++ b/styles/contact.css
@@ -2,4 +2,7 @@
     width: 100%;
     height: 100vh;
     background: #001660;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
